# kochbuch

./: .gitignore  Dockerfile  README.md  docker-compose.yml  init.sql  pyproject.toml
kochbuch/: app.py
src/: app.py
src/www/: styles.css
